--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body class="imagemDeFundo">
-    <header>
+    <header >
         <nav class="containerMenu">
             <a href="#">Fanfiction</a>
             <a href="#">Personagens</a>
@@ -30,25 +30,43 @@
         </nav>
     </header>
     <main>
-        <section class="containerConteudo">
-            <h1>Herry Potter</h1>
-            <p>Que tal explorar mais esse mundo?</p>
+        <section class="containerPrimeiraSecao">
+            <h1>Harry Potter</h1>
+            <h2>Que tal explorar mais esse mundo?</h2>
         </section>
-        <section class="containercasasHerryPotter">
-            <div class="casas">
-                <img src="imagensProjetoHerryPotter/corvinal.png" alt="">
+        <section class="containerSegundaSecao">
+
+            <div class="casas corvinal">
+                <a href="">
+                    <img  src="imagensProjetoHerryPotter/corvinal.png" alt="">
+                    <p class="descricao">Corvinal</p>
+                </a>
             </div>
-            <div class="casas">
-                <img src="imagensProjetoHerryPotter/grifinoria.webp" alt="">
+
+            <div class="casas grifinoria">
+                <a href="">
+                    <img src="imagensProjetoHerryPotter/grifinoria.webp" alt="">
+                    <p class="descricao">Grifinória</p>
+                </a>
             </div>
-            <div class="casas"> 
-                <img src="imagensProjetoHerryPotter/sonserina.webp" alt="">
+
+            <div class="casas sonserina"> 
+                <a href="">
+                    <img src="imagensProjetoHerryPotter/sonserina.webp" alt="">
+                    <p class="descricao">Sonserina</p>
+                </a>
             </div>
-            <div class="casas">
-                <img src="imagensProjetoHerryPotter/Hufflepuff_ClearBG.webp" alt="">
+
+            <div class="casas Lufa-Lufa">
+                <a href="">
+                    <img src="imagensProjetoHerryPotter/Hufflepuff_ClearBG.webp" alt="">
+                    <p class="descricao">Lufa-Lufa</p>
+                </a>
             </div>
         </section>
     </main>
+
+
 
     
 </body>
